フッター編集②

--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
                 </span>
                 <p class="site-footer__copy">© 2025 Lumpcore Inc.</p>
             </div>
-            <nav class="site-footer__column site-footer__nav" aria-label="サイト内リンク">
-                <p class="site-footer__column-title">サイト内リンク</p>
+            <nav class="site-footer__column site-footer__nav" aria-label="サイト内メニュー">
+                <p class="site-footer__column-title">サイト内メニュー</p>
                 <ul class="site-footer__list">
                     <li><a href="#purpose">Purpose</a></li>
                     <li><a href="#mission">Mission</a></li>
@@ -334,8 +334,8 @@
                     <li><a href="#contact">お問い合わせ</a></li>
                 </ul>
             </nav>
-            <nav class="site-footer__column site-footer__links" aria-label="外部リンク">
-                <p class="site-footer__column-title">外部リンク</p>
+            <nav class="site-footer__column site-footer__links" aria-label="関連サイト">
+                <p class="site-footer__column-title">関連サイト</p>
                 <ul class="site-footer__list">
                     <li><a href="https://www.lumpcore.co.jp/" target="_blank" rel="noopener noreferrer">コーポレートサイト</a></li>
                     <li><a href="https://www.lumpcore.co.jp/recruit/" target="_blank" rel="noopener noreferrer">採用サイト</a></li>
