事業紹介編集(色合い変更)

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <img src="assets/images/business/dental consulting.png" alt="歯科コンサルティング" class="business-image" loading="lazy">
                 <div class="business-description">
                     <h3>歯科コンサルティング</h3>
-                    <p>人事・経理・診療フローの見直しやシステム設計を通じて、医院経営を効率化。DX導入やWEB集客の改善まで、歯科現場に密着した支援を行います。</p>
+                    <p>人事・経理・診療フローの見直しやシステム設計を通じて、医院経営を効率化。<br>DX導入やWEB集客の改善まで、歯科現場に密着した支援を行います。</p>
                     <a href="business/business.html#dental-consulting" class="m-buttons-img-txt-08-arrow-wrap">
                         <span class="icon"><i class="fas fa-external-link-alt"></i></span> 詳細を見る
                     </a>
