ニュースセクション編集

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </a>
             <nav>
                 <ul class="nav-list">
-                    <li class="nav-item dropdown">
+                <li class="nav-item dropdown">
                         <a href="#" class="nav-link">
                             <div class="menu-icon">
                                 <span class="bar"></span>
@@ -50,7 +50,7 @@
                             <li><a href="#mission">・Mission</a></li>
                             <li><a href="#employee-interviews">・夢忠人紹介</a></li>
                             <li><a href="#business">・事業紹介</a></li>
-                            <li><a href="#news">・ニュース</a></li>
+                            <li><a href="#news">・ニュース・トピックス</a></li>
                             <li><a href="#contact">・お問い合わせ</a></li>
                         </ul>
                     </li>
@@ -183,8 +183,8 @@
     <section id="news" class="hidden fade-in" aria-labelledby="news-hero-title">
         <div class="section-hero-intro">
             <div class="section-hero-card">
-                <p class="section-hero-eyebrow">News</p>
-                <h2 id="news-hero-title" class="section-hero-title">ニュース</h2>
+                <p class="section-hero-eyebrow">News &amp; Topics</p>
+                <h2 id="news-hero-title" class="section-hero-title">ニュース・トピックス</h2>
             </div>
         </div>
         <div class="filter-container">
@@ -192,7 +192,8 @@
             <select id="news-filter">
                 <option value="all">すべて</option>
                 <option value="採用">採用</option>
-                <!-- 他のカテゴリ -->
+                <option value="イベント">イベント</option>
+                <option value="メンバー紹介">メンバー紹介</option>
             </select>
         </div>
         <ul id="news-list">
@@ -283,9 +284,9 @@
                     <span class="link-card-number">06</span>
                 </div>
                 <div class="link-card-content">
-                    <span class="link-card-eyebrow">News</span>
-                    <h3 class="link-card-title">最新情報</h3>
-                    <p class="link-card-description">最新のニュースやイベント情報をこちらでチェック。</p>
+                    <span class="link-card-eyebrow">News &amp; Topics</span>
+                    <h3 class="link-card-title">ニュース・トピックス</h3>
+                    <p class="link-card-description">最新のニュースやイベント情報、メンバー紹介をチェック。</p>
                     <div class="link-card-footer">
                         <span class="link-card-action">View More</span>
                         <span class="link-card-arrow" aria-hidden="true">→</span>
@@ -321,7 +322,7 @@
                     <li><a href="#mission">Mission</a></li>
                     <li><a href="#employee-interviews">夢忠人紹介</a></li>
                     <li><a href="#business">事業紹介</a></li>
-                    <li><a href="#news">ニュース</a></li>
+                    <li><a href="#news">ニュース・トピックス</a></li>
                     <li><a href="#contact">お問い合わせ</a></li>
                 </ul>
             </nav>
