夢忠人紹介編集（スマホ版もっと見る追加のための編集＊まだ未完成）

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </p>
     </section>
 
-    <section id="employee-interviews" class="hidden fade-in" aria-labelledby="employee-hero-title">
+    <section id="employee-interviews" class="fade-in" aria-labelledby="employee-hero-title">
         <div class="section-hero-intro">
             <div class="section-hero-card">
                 <p class="section-hero-eyebrow">Members</p>
